--- a/theme/menu.css
+++ b/theme/menu.css
@@ -113,7 +113,7 @@
   position: relative;
   margin: 0;
   padding-left: 0;
-  background-color: #eff2f7;
+  background-color: #c1b087;
 }
 
 .el-menu li{
@@ -197,7 +197,7 @@
 }
 
 .el-menu--horizontal .el-menu-item:hover, .el-menu--horizontal .el-submenu__title:hover{
-  background-color: #eff2f7;
+  background-color: #c1b087;
 }
 
 .el-menu--horizontal > .el-menu-item:hover, .el-menu--horizontal > .el-submenu:hover .el-submenu__title, .el-menu--horizontal > .el-submenu.is-active .el-submenu__title{
