调通了图片上传功能

--- a/theme/collapse.css
+++ b/theme/collapse.css
@@ -108,7 +108,7 @@
     line-height: 43px;
     padding-left: 15px;
     background-color: #fff;
-    color: #475669;
+    color: #3c372f;
     cursor: pointer;
     border-bottom: 1px solid #e0e6ed;
     font-size: 13px;
