--- a/theme/table-column.css
+++ b/theme/table-column.css
@@ -332,14 +332,14 @@
 .el-tag--gray{
     background-color: #e5e9f2;
     border-color: #e5e9f2;
-    color: #475669;
+    color: #3c372f;
 }
 .el-tag--gray .el-tag__close:hover{
-    background-color: #475669;
+    background-color: #3c372f;
     color: #fff;
 }
 .el-tag--gray.is-hit{
-    border-color: #475669;
+    border-color: #3c372f;
 }
 .el-tag--primary{
     background-color: rgba(32,159,255,0.10);
@@ -511,7 +511,7 @@
 
 .el-table-filter__list-item:hover{
     background-color: #e5e9f2;
-    color: #475669;
+    color: #3c372f;
 }
 
 .el-table-filter__list-item.is-active{
