--- a/theme/tag.css
+++ b/theme/tag.css
@@ -125,16 +125,16 @@
 .el-tag--gray{
     background-color: #e5e9f2;
     border-color: #e5e9f2;
-    color: #475669
+    color: #3c372f
 }
 
 .el-tag--gray .el-tag__close:hover{
-    background-color: #475669;
+    background-color: #3c372f;
     color: #fff
 }
 
 .el-tag--gray.is-hit{
-    border-color: #475669
+    border-color: #3c372f
 }
 
 .el-tag--primary{
