--- a/theme/time-select.css
+++ b/theme/time-select.css
@@ -415,7 +415,7 @@
   --------------------------*/
 }
 .el-picker-panel {
-  color: #475669;
+  color: #3c372f;
   border: 1px solid #D3DCE6;
   box-shadow: 0 2px 6px #ccc;
   background: #fff;
@@ -447,7 +447,7 @@
   background-color: transparent;
   line-height: 28px;
   font-size: 14px;
-  color: #475669;
+  color: #3c372f;
   padding-left: 12px;
   text-align: left;
   outline: none;
