--- a/element-variables.css
+++ b/element-variables.css
@@ -15,7 +15,7 @@
   --color-success: #13ce66;
   --color-warning: #f7ba2a;
   --color-danger: #ff4949;
-  --color-info: #50bfff;
+  --color-info: #9c743c;
   --color-blue: #2e90fe;
   --color-blue-light: #5da9ff;
   --color-blue-lighter: rgba(var(--color-blue), 0.12);
@@ -25,7 +25,7 @@
 
   /* Link
   -------------------------- */
-  --link-color: #475669;
+  --link-color: #3c372f;
   --link-hover-color: var(--color-primary);
 
   /* Border
@@ -514,7 +514,7 @@
   --submenu-item-fill: #e5e9f2;
 
   --dark-menu-item-color: var(--link-color);
-  --dark-menu-item-fill: #324057;
+  --dark-menu-item-fill: var(--link-color);
   --dark-menu-item-hover-fill: var(--link-color);
   --dark-submenu-item-fill: #1f2d3d;
 
@@ -569,7 +569,7 @@
   --collapse-border-radius: 0;
   --collapse-header-padding: 20px;
   --collapse-header-fill: #fff;
-  --collapse-header-color: #475669;
+  --collapse-header-color: #3c372f;
   --collapse-header-size: 13px;
   --collapse-content-fill: #f9fafc;
   --collapse-content-size: 13px;
