--- a/theme/date-picker.css
+++ b/theme/date-picker.css
@@ -245,7 +245,7 @@
     height: 32px;
     display: block;
     line-height: 32px;
-    color: #475669;
+    color: #3c372f;
 }
 .el-month-table td .cell:hover {
     background-color: #e5e9f2;
@@ -365,7 +365,7 @@
     height: 32px;
     display: block;
     line-height: 32px;
-    color: #475669;
+    color: #3c372f;
 }
 .el-year-table td .cell:hover {
     background-color: #e5e9f2;
@@ -927,7 +927,7 @@
   --------------------------*/
 }
 .el-picker-panel {
-    color: #475669;
+    color: #3c372f;
     border: 1px solid #D3DCE6;
     box-shadow: 0 2px 6px #ccc;
     background: #fff;
@@ -959,7 +959,7 @@
     background-color: transparent;
     line-height: 28px;
     font-size: 14px;
-    color: #475669;
+    color: #3c372f;
     padding-left: 12px;
     text-align: left;
     outline: none;
