--- a/theme/index.css
+++ b/theme/index.css
@@ -660,23 +660,23 @@
 }
 .el-button--info {
     color: #fff;
-    background-color: #50bfff;
-    border-color: #50bfff;
+    background-color: #9c743c;
+    border-color: #9c743c;
 }
 .el-button--info:hover, .el-button--info:focus {
-    background: rgb(115, 204, 255);
-    border-color: rgb(115, 204, 255);
+    background: rgb(176, 144, 99);
+    border-color: rgb(176, 144, 99);
     color: #fff;
 }
 .el-button--info:active {
-    background: rgb(72, 172, 230);
-    border-color: rgb(72, 172, 230);
+    background: rgb(140, 104, 54);
+    border-color: rgb(140, 104, 54);
     color: #fff;
     outline: none;
 }
 .el-button--info.is-active {
-    background: rgb(72, 172, 230);
-    border-color: rgb(72, 172, 230);
+    background: rgb(140, 104, 54);
+    border-color: rgb(140, 104, 54);
     color: #fff;
 }
 .el-button--info.is-plain {
@@ -686,13 +686,13 @@
 }
 .el-button--info.is-plain:hover, .el-button--info.is-plain:focus {
     background: #fff;
-    border-color: #50bfff;
-    color: #50bfff;
+    border-color: #9c743c;
+    color: #9c743c;
 }
 .el-button--info.is-plain:active {
     background: #fff;
-    border-color: rgb(72, 172, 230);
-    color: rgb(72, 172, 230);
+    border-color: rgb(140, 104, 54);
+    color: rgb(140, 104, 54);
     outline: none;
 }
 .el-button--large {
@@ -935,7 +935,7 @@
     border-radius: 4px;
     border: 1px solid #c0ccda;
     box-sizing: border-box;
-    color: #1f2d3d;
+    color: rgba(0, 0, 0, 0.7);
     display: block;
     font-size: inherit;
     height: 36px;
@@ -1085,7 +1085,7 @@
     box-sizing: border-box;
     width: 100%;
     font-size: 14px;
-    color: #1f2d3d;
+    color: rgba(0, 0, 0, 0.7);
     background-color: #fff;
     background-image: none;
     border: 1px solid #c0ccda;
@@ -1462,7 +1462,7 @@
     border-radius: 4px;
     border: 1px solid #c0ccda;
     box-sizing: border-box;
-    color: #1f2d3d;
+    color: rgba(0, 0, 0, 0.7);
     display: block;
     font-size: inherit;
     height: 36px;
@@ -1612,7 +1612,7 @@
     box-sizing: border-box;
     width: 100%;
     font-size: 14px;
-    color: #1f2d3d;
+    color: rgba(0, 0, 0, 0.7);
     background-color: #fff;
     background-image: none;
     border: 1px solid #c0ccda;
@@ -1761,14 +1761,14 @@
 .el-tag--gray {
     background-color: #e5e9f2;
     border-color: #e5e9f2;
-    color: #475669;
+    color: #3c372f;
 }
 .el-tag--gray .el-tag__close:hover {
-    background-color: #475669;
+    background-color: #3c372f;
     color: #fff;
 }
 .el-tag--gray.is-hit {
-    border-color: #475669;
+    border-color: #3c372f;
 }
 .el-tag--primary {
     background-color: rgba(32,159,255,0.10);
@@ -1915,7 +1915,7 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    color: #475669;
+    color: #3c372f;
     height: 36px;
     line-height: 1.5;
     box-sizing: border-box;
@@ -2267,7 +2267,7 @@
     background-color: #13ce66;
 }
 .el-alert--info {
-    background-color: #50bfff;
+    background-color: #9c743c;
 }
 .el-alert--warning {
     background-color: #f7ba2a;
@@ -2422,7 +2422,7 @@
     color: #ff4949;
 }
 .el-notification .el-icon-information {
-    color: #50bfff;
+    color: #9c743c;
 }
 .el-notification .el-icon-warning {
     color: #f7ba2a;
@@ -2598,7 +2598,7 @@
     border-radius: 4px;
     border: 1px solid #c0ccda;
     box-sizing: border-box;
-    color: #1f2d3d;
+    color: rgba(0, 0, 0, 0.7);
     display: block;
     font-size: inherit;
     height: 36px;
@@ -2748,7 +2748,7 @@
     box-sizing: border-box;
     width: 100%;
     font-size: 14px;
-    color: #1f2d3d;
+    color: rgba(0, 0, 0, 0.7);
     background-color: #fff;
     background-image: none;
     border: 1px solid #c0ccda;
@@ -4448,23 +4448,23 @@
 }
 .el-button--info {
     color: #fff;
-    background-color: #50bfff;
-    border-color: #50bfff;
+    background-color: #9c743c;
+    border-color: #9c743c;
 }
 .el-button--info:hover, .el-button--info:focus {
-    background: rgb(115, 204, 255);
-    border-color: rgb(115, 204, 255);
+    background: rgb(176, 144, 99);
+    border-color: rgb(176, 144, 99);
     color: #fff;
 }
 .el-button--info:active {
-    background: rgb(72, 172, 230);
-    border-color: rgb(72, 172, 230);
+    background: rgb(140, 104, 54);
+    border-color: rgb(140, 104, 54);
     color: #fff;
     outline: none;
 }
 .el-button--info.is-active {
-    background: rgb(72, 172, 230);
-    border-color: rgb(72, 172, 230);
+    background: rgb(140, 104, 54);
+    border-color: rgb(140, 104, 54);
     color: #fff;
 }
 .el-button--info.is-plain {
@@ -4474,13 +4474,13 @@
 }
 .el-button--info.is-plain:hover, .el-button--info.is-plain:focus {
     background: #fff;
-    border-color: #50bfff;
-    color: #50bfff;
+    border-color: #9c743c;
+    color: #9c743c;
 }
 .el-button--info.is-plain:active {
     background: #fff;
-    border-color: rgb(72, 172, 230);
-    color: rgb(72, 172, 230);
+    border-color: rgb(140, 104, 54);
+    color: rgb(140, 104, 54);
     outline: none;
 }
 .el-button--large {
@@ -4638,7 +4638,7 @@
 }
 .el-dropdown-menu__item:not(.is-disabled):hover {
     background-color: #e5e9f2;
-    color: #475669;
+    color: #3c372f;
 }
 .el-dropdown-menu__item.is-disabled {
     cursor: default;
@@ -5348,14 +5348,14 @@
 .el-tag--gray {
     background-color: #e5e9f2;
     border-color: #e5e9f2;
-    color: #475669;
+    color: #3c372f;
 }
 .el-tag--gray .el-tag__close:hover {
-    background-color: #475669;
+    background-color: #3c372f;
     color: #fff;
 }
 .el-tag--gray.is-hit {
-    border-color: #475669;
+    border-color: #3c372f;
 }
 .el-tag--primary {
     background-color: rgba(32,159,255,0.10);
@@ -6173,14 +6173,14 @@
 .el-tag--gray {
     background-color: #e5e9f2;
     border-color: #e5e9f2;
-    color: #475669;
+    color: #3c372f;
 }
 .el-tag--gray .el-tag__close:hover {
-    background-color: #475669;
+    background-color: #3c372f;
     color: #fff;
 }
 .el-tag--gray.is-hit {
-    border-color: #475669;
+    border-color: #3c372f;
 }
 .el-tag--primary {
     background-color: rgba(32,159,255,0.10);
@@ -6346,7 +6346,7 @@
 }
 .el-table-filter__list-item:hover {
     background-color: #e5e9f2;
-    color: #475669;
+    color: #3c372f;
 }
 .el-table-filter__list-item.is-active {
     background-color: #20a0ff;
@@ -6740,7 +6740,7 @@
     border-radius: 4px;
     border: 1px solid #c0ccda;
     box-sizing: border-box;
-    color: #1f2d3d;
+    color: rgba(0, 0, 0, 0.7);
     display: block;
     font-size: inherit;
     height: 36px;
@@ -6890,7 +6890,7 @@
     box-sizing: border-box;
     width: 100%;
     font-size: 14px;
-    color: #1f2d3d;
+    color: rgba(0, 0, 0, 0.7);
     background-color: #fff;
     background-image: none;
     border: 1px solid #c0ccda;
@@ -7039,14 +7039,14 @@
 .el-tag--gray {
     background-color: #e5e9f2;
     border-color: #e5e9f2;
-    color: #475669;
+    color: #3c372f;
 }
 .el-tag--gray .el-tag__close:hover {
-    background-color: #475669;
+    background-color: #3c372f;
     color: #fff;
 }
 .el-tag--gray.is-hit {
-    border-color: #475669;
+    border-color: #3c372f;
 }
 .el-tag--primary {
     background-color: rgba(32,159,255,0.10);
@@ -7193,7 +7193,7 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    color: #475669;
+    color: #3c372f;
     height: 36px;
     line-height: 1.5;
     box-sizing: border-box;
@@ -7524,7 +7524,7 @@
 .el-pagination {
     white-space: nowrap;
     padding: 2px 5px;
-    color: #475669;
+    color: #3c372f;
 }
 .el-pagination:before, .el-pagination:after {
     display: table;
@@ -8212,7 +8212,7 @@
     border-radius: 4px;
     border: 1px solid #c0ccda;
     box-sizing: border-box;
-    color: #1f2d3d;
+    color: rgba(0, 0, 0, 0.7);
     display: block;
     font-size: inherit;
     height: 36px;
@@ -8362,7 +8362,7 @@
     box-sizing: border-box;
     width: 100%;
     font-size: 14px;
-    color: #1f2d3d;
+    color: rgba(0, 0, 0, 0.7);
     background-color: #fff;
     background-image: none;
     border: 1px solid #c0ccda;
@@ -8648,7 +8648,7 @@
     color: #ff4949;
 }
 .el-message .el-icon-information {
-    color: #50bfff;
+    color: #9c743c;
 }
 .el-message .el-icon-warning {
     color: #f7ba2a;
@@ -9139,23 +9139,23 @@
 }
 .el-button--info {
     color: #fff;
-    background-color: #50bfff;
-    border-color: #50bfff;
+    background-color: #9c743c;
+    border-color: #9c743c;
 }
 .el-button--info:hover, .el-button--info:focus {
-    background: rgb(115, 204, 255);
-    border-color: rgb(115, 204, 255);
+    background: rgb(176, 144, 99);
+    border-color: rgb(176, 144, 99);
     color: #fff;
 }
 .el-button--info:active {
-    background: rgb(72, 172, 230);
-    border-color: rgb(72, 172, 230);
+    background: rgb(140, 104, 54);
+    border-color: rgb(140, 104, 54);
     color: #fff;
     outline: none;
 }
 .el-button--info.is-active {
-    background: rgb(72, 172, 230);
-    border-color: rgb(72, 172, 230);
+    background: rgb(140, 104, 54);
+    border-color: rgb(140, 104, 54);
     color: #fff;
 }
 .el-button--info.is-plain {
@@ -9165,13 +9165,13 @@
 }
 .el-button--info.is-plain:hover, .el-button--info.is-plain:focus {
     background: #fff;
-    border-color: #50bfff;
-    color: #50bfff;
+    border-color: #9c743c;
+    color: #9c743c;
 }
 .el-button--info.is-plain:active {
     background: #fff;
-    border-color: rgb(72, 172, 230);
-    color: rgb(72, 172, 230);
+    border-color: rgb(140, 104, 54);
+    color: rgb(140, 104, 54);
     outline: none;
 }
 .el-button--large {
@@ -9414,7 +9414,7 @@
     border-radius: 4px;
     border: 1px solid #c0ccda;
     box-sizing: border-box;
-    color: #1f2d3d;
+    color: rgba(0, 0, 0, 0.7);
     display: block;
     font-size: inherit;
     height: 36px;
@@ -9564,7 +9564,7 @@
     box-sizing: border-box;
     width: 100%;
     font-size: 14px;
-    color: #1f2d3d;
+    color: rgba(0, 0, 0, 0.7);
     background-color: #fff;
     background-image: none;
     border: 1px solid #c0ccda;
@@ -9624,7 +9624,7 @@
 }
 .el-message-box__content {
     padding: 30px 20px;
-    color: #475669;
+    color: #3c372f;
     font-size: 14px;
     position: relative;
 }
@@ -9692,7 +9692,7 @@
     color: #13ce66;
 }
 .el-message-box__status.el-icon-information {
-    color: #50bfff;
+    color: #9c743c;
 }
 .el-message-box__status.el-icon-warning {
     color: #f7ba2a;
@@ -9973,7 +9973,7 @@
     height: 32px;
     display: block;
     line-height: 32px;
-    color: #475669;
+    color: #3c372f;
 }
 .el-month-table td .cell:hover {
     background-color: #e5e9f2;
@@ -10093,7 +10093,7 @@
     height: 32px;
     display: block;
     line-height: 32px;
-    color: #475669;
+    color: #3c372f;
 }
 .el-year-table td .cell:hover {
     background-color: #e5e9f2;
@@ -10655,7 +10655,7 @@
   --------------------------*/
 }
 .el-picker-panel {
-    color: #475669;
+    color: #3c372f;
     border: 1px solid #D3DCE6;
     box-shadow: 0 2px 6px #ccc;
     background: #fff;
@@ -10687,7 +10687,7 @@
     background-color: transparent;
     line-height: 28px;
     font-size: 14px;
-    color: #475669;
+    color: #3c372f;
     padding-left: 12px;
     text-align: left;
     outline: none;
@@ -12050,7 +12050,7 @@
   --------------------------*/
 }
 .el-picker-panel {
-    color: #475669;
+    color: #3c372f;
     border: 1px solid #D3DCE6;
     box-shadow: 0 2px 6px #ccc;
     background: #fff;
@@ -12082,7 +12082,7 @@
     background-color: transparent;
     line-height: 28px;
     font-size: 14px;
-    color: #475669;
+    color: #3c372f;
     padding-left: 12px;
     text-align: left;
     outline: none;
@@ -12450,7 +12450,7 @@
     border-radius: 4px;
     border: 1px solid #c0ccda;
     box-sizing: border-box;
-    color: #1f2d3d;
+    color: rgba(0, 0, 0, 0.7);
     display: block;
     font-size: inherit;
     height: 36px;
@@ -12600,7 +12600,7 @@
     box-sizing: border-box;
     width: 100%;
     font-size: 14px;
-    color: #1f2d3d;
+    color: rgba(0, 0, 0, 0.7);
     background-color: #fff;
     background-image: none;
     border: 1px solid #c0ccda;
@@ -12917,14 +12917,14 @@
 .el-tag--gray {
     background-color: #e5e9f2;
     border-color: #e5e9f2;
-    color: #475669;
+    color: #3c372f;
 }
 .el-tag--gray .el-tag__close:hover {
-    background-color: #475669;
+    background-color: #3c372f;
     color: #fff;
 }
 .el-tag--gray.is-hit {
-    border-color: #475669;
+    border-color: #3c372f;
 }
 .el-tag--primary {
     background-color: rgba(32,159,255,0.10);
@@ -14000,7 +14000,7 @@
     height: 56px;
     line-height: 56px;
     font-size: 14px;
-    color: #475669;
+    color: #3c372f;
     padding: 0 20px;
     cursor: pointer;
     position: relative;
@@ -14027,7 +14027,7 @@
     list-style: none;
 }
 .el-menu--dark {
-    background-color: #324057;
+    background-color: #3c372f;
 }
 .el-menu--dark .el-menu-item, .el-menu--dark .el-submenu__title {
     color: #c0ccda;
@@ -14053,7 +14053,7 @@
     border-bottom: 5px solid transparent;
 }
 .el-menu--horizontal .el-menu-item:hover {
-    background-color: #D3DCE6;
+    background-color: #c1b087;
 }
 .el-menu--horizontal .el-submenu {
     float: left;
@@ -14097,7 +14097,7 @@
 }
 .el-menu--horizontal.el-menu--dark {}
 .el-menu--horizontal.el-menu--dark .el-menu-item:hover, .el-menu--horizontal.el-menu--dark .el-submenu__title:hover {
-    background-color: #324057;
+    background-color: #3c372f;
 }
 .el-menu--horizontal.el-menu--dark .el-submenu .el-menu-item, .el-menu--horizontal.el-menu--dark .el-submenu .el-submenu-title {
     color: #475669;
@@ -17980,7 +17980,7 @@
     line-height: 43px;
     padding-left: 15px;
     background-color: #fff;
-    color: #475669;
+    color: #3c372f;
     cursor: pointer;
     border-bottom: 1px solid #e0e6ed;
     font-size: 13px;
