--- a/theme/input.css
+++ b/theme/input.css
@@ -132,7 +132,7 @@
     border-radius: 4px;
     border: 1px solid #c0ccda;
     box-sizing: border-box;
-    color: #1f2d3d;
+    color: rgba(0, 0, 0, 0.7);
     display: block;
     font-size: inherit;
     height: 36px;
@@ -314,7 +314,7 @@
     box-sizing: border-box;
     width: 100%;
     font-size: 14px;
-    color: #1f2d3d;
+    color: rgba(0, 0, 0, 0.7);
     background-color: #fff;
     background-image: none;
     border: 1px solid #c0ccda;
