--- a/theme/option.css
+++ b/theme/option.css
@@ -97,7 +97,7 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    color: #475669;
+    color: #3c372f;
     height: 36px;
     line-height: 1.5;
     box-sizing: border-box;
