--- a/theme/pagination.css
+++ b/theme/pagination.css
@@ -356,7 +356,7 @@
     border-radius: 4px;
     border: 1px solid #c0ccda;
     box-sizing: border-box;
-    color: #1f2d3d;
+    color: rgba(0, 0, 0, 0.7);
     display: block;
     font-size: inherit;
     height: 36px;
@@ -506,7 +506,7 @@
     box-sizing: border-box;
     width: 100%;
     font-size: 14px;
-    color: #1f2d3d;
+    color: rgba(0, 0, 0, 0.7);
     background-color: #fff;
     background-image: none;
     border: 1px solid #c0ccda;
@@ -655,14 +655,14 @@
 .el-tag--gray{
     background-color: #e5e9f2;
     border-color: #e5e9f2;
-    color: #475669;
+    color: #3c372f;
 }
 .el-tag--gray .el-tag__close:hover{
-    background-color: #475669;
+    background-color: #3c372f;
     color: #fff;
 }
 .el-tag--gray.is-hit{
-    border-color: #475669;
+    border-color: #3c372f;
 }
 .el-tag--primary{
     background-color: rgba(32,159,255,0.10);
@@ -809,7 +809,7 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    color: #475669;
+    color: #3c372f;
     height: 36px;
     line-height: 1.5;
     box-sizing: border-box;
@@ -1141,7 +1141,7 @@
 .el-pagination{
     white-space: nowrap;
     padding: 2px 5px;
-    color: #475669;
+    color: #3c372f;
 }
 
 .el-pagination span, .el-pagination button{
