--- a/theme/message.css
+++ b/theme/message.css
@@ -158,7 +158,7 @@
     right: 0;
     position: absolute;
     cursor: pointer;
-    color: #c0ccda;
+    color: rgba(0, 0, 0, 0.2);
     font-size: 14px;
 }
 
