--- a/theme/radio.css
+++ b/theme/radio.css
@@ -156,7 +156,7 @@
 }
 
 .el-radio__inner{
-    border: 1px solid #c0ccda;
+    border: 1px solid rgba(0, 0, 0, 0.2);
     border-radius: 100%;
     width: 18px;
     height: 18px;
@@ -237,7 +237,7 @@
     vertical-align: middle;
     cursor: pointer;
     background: #fff;
-    border: 1px solid #c0ccda;
+    border: 1px solid rgba(0, 0, 0, 0.2);
     color: #1F2D3D;
     -webkit-appearance: none;
     text-align: center;
@@ -278,7 +278,7 @@
 .el-radio-button__orig-radio:disabled{}
 
 .el-radio-button__orig-radio:disabled + .el-radio-button__inner{
-    color: #c0ccda;
+    color: rgba(0, 0, 0, 0.2);
     cursor: not-allowed;
     background-image: none;
     background-color: #EFF2F7;
