--- a/src/app.less
+++ b/src/app.less
@@ -1,4 +1,11 @@
 @import "mixins";
+#app {
+  font-family: 'Avenir', Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  color: #2c3e50;
+}
 body {
   padding: 0;
   margin: 0;
