--- a/theme/checkbox.css
+++ b/theme/checkbox.css
@@ -115,7 +115,7 @@
 
 .el-checkbox__input.is-indeterminate .el-checkbox__inner{
     background-color: #c1b087;
-    border-color: #2e90fe
+    border-color: #9c743c
 }
 
 .el-checkbox__input.is-indeterminate .el-checkbox__inner::before{
@@ -139,7 +139,7 @@
 
 .el-checkbox__input.is-checked .el-checkbox__inner{
     background-color: #c1b087;
-    border-color: #2e90fe
+    border-color: #9c743c
 }
 
 .el-checkbox__input.is-checked .el-checkbox__inner::after{
@@ -187,7 +187,7 @@
 .el-checkbox__inner{
     display: inline-block;
     position: relative;
-    border: 1px solid #c0ccda;
+    border: 1px solid rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     box-sizing: border-box;
     width: 18px;
