--- a/theme/dropdown.css
+++ b/theme/dropdown.css
@@ -188,7 +188,7 @@
     white-space: nowrap;
     cursor: pointer;
     background: #fff;
-    border: 1px solid #c0ccda;
+    border: 1px solid rgba(0, 0, 0, 0.2);
     color: #1F2D3D;
     -webkit-appearance: none;
     text-align: center;
@@ -238,7 +238,7 @@
 }
 .el-button.is-disabled{}
 .el-button.is-disabled, .el-button.is-disabled:hover, .el-button.is-disabled:focus{
-    color: #c0ccda;
+    color: rgba(0, 0, 0, 0.2);
     cursor: not-allowed;
     background-image: none;
     background-color: #EFF2F7;
@@ -292,7 +292,7 @@
 }
 .el-button--primary.is-plain{
     background: #fff;
-    border: 1px solid #c0ccda;
+    border: 1px solid rgba(0, 0, 0, 0.2);
     color: #1F2D3D;
 }
 .el-button--primary.is-plain:hover, .el-button--primary.is-plain:focus{
@@ -329,7 +329,7 @@
 }
 .el-button--success.is-plain{
     background: #fff;
-    border: 1px solid #c0ccda;
+    border: 1px solid rgba(0, 0, 0, 0.2);
     color: #1F2D3D;
 }
 .el-button--success.is-plain:hover, .el-button--success.is-plain:focus{
@@ -366,7 +366,7 @@
 }
 .el-button--warning.is-plain{
     background: #fff;
-    border: 1px solid #c0ccda;
+    border: 1px solid rgba(0, 0, 0, 0.2);
     color: #1F2D3D;
 }
 .el-button--warning.is-plain:hover, .el-button--warning.is-plain:focus{
@@ -403,7 +403,7 @@
 }
 .el-button--danger.is-plain{
     background: #fff;
-    border: 1px solid #c0ccda;
+    border: 1px solid rgba(0, 0, 0, 0.2);
     color: #1F2D3D;
 }
 .el-button--danger.is-plain:hover, .el-button--danger.is-plain:focus{
@@ -440,7 +440,7 @@
 }
 .el-button--info.is-plain{
     background: #fff;
-    border: 1px solid #c0ccda;
+    border: 1px solid rgba(0, 0, 0, 0.2);
     color: #1F2D3D;
 }
 .el-button--info.is-plain:hover, .el-button--info.is-plain:focus{
@@ -616,7 +616,7 @@
 }
 
 .el-dropdown-menu__item:not(.is-disabled):hover{
-    background-color: #e5e9f2;
+    background-color: #f5f5f5;
     color: #3c372f;
 }
 
