--- a/theme/message-box.css
+++ b/theme/message-box.css
@@ -215,7 +215,7 @@
   white-space: nowrap;
   cursor: pointer;
   background: #fff;
-  border: 1px solid #c0ccda;
+  border: 1px solid rgba(0, 0, 0, 0.2);
   color: #1F2D3D;
   -webkit-appearance: none;
   text-align: center;
@@ -265,7 +265,7 @@
 }
 .el-button.is-disabled{}
 .el-button.is-disabled, .el-button.is-disabled:hover, .el-button.is-disabled:focus{
-  color: #c0ccda;
+  color: rgba(0, 0, 0, 0.2);
   cursor: not-allowed;
   background-image: none;
   background-color: #EFF2F7;
@@ -319,7 +319,7 @@
 }
 .el-button--primary.is-plain{
   background: #fff;
-  border: 1px solid #c0ccda;
+  border: 1px solid rgba(0, 0, 0, 0.2);
   color: #1F2D3D;
 }
 .el-button--primary.is-plain:hover, .el-button--primary.is-plain:focus{
@@ -356,7 +356,7 @@
 }
 .el-button--success.is-plain{
   background: #fff;
-  border: 1px solid #c0ccda;
+  border: 1px solid rgba(0, 0, 0, 0.2);
   color: #1F2D3D;
 }
 .el-button--success.is-plain:hover, .el-button--success.is-plain:focus{
@@ -393,7 +393,7 @@
 }
 .el-button--warning.is-plain{
   background: #fff;
-  border: 1px solid #c0ccda;
+  border: 1px solid rgba(0, 0, 0, 0.2);
   color: #1F2D3D;
 }
 .el-button--warning.is-plain:hover, .el-button--warning.is-plain:focus{
@@ -430,7 +430,7 @@
 }
 .el-button--danger.is-plain{
   background: #fff;
-  border: 1px solid #c0ccda;
+  border: 1px solid rgba(0, 0, 0, 0.2);
   color: #1F2D3D;
 }
 .el-button--danger.is-plain:hover, .el-button--danger.is-plain:focus{
@@ -467,7 +467,7 @@
 }
 .el-button--info.is-plain{
   background: #fff;
-  border: 1px solid #c0ccda;
+  border: 1px solid rgba(0, 0, 0, 0.2);
   color: #1F2D3D;
 }
 .el-button--info.is-plain:hover, .el-button--info.is-plain:focus{
@@ -697,16 +697,16 @@
   cursor: not-allowed;
 }
 .el-input.is-disabled .el-input__inner::-webkit-input-placeholder{
-  color: #c0ccda;
+  color: rgba(0, 0, 0, 0.2);
 }
 .el-input.is-disabled .el-input__inner::-moz-placeholder{
-  color: #c0ccda;
+  color: rgba(0, 0, 0, 0.2);
 }
 .el-input.is-disabled .el-input__inner:-ms-input-placeholder{
-  color: #c0ccda;
+  color: rgba(0, 0, 0, 0.2);
 }
 .el-input.is-disabled .el-input__inner::placeholder{
-  color: #c0ccda;
+  color: rgba(0, 0, 0, 0.2);
 }
 .el-input.is-active .el-input__inner{
   outline: none;
@@ -719,7 +719,7 @@
   background-color: #fff;
   background-image: none;
   border-radius: 4px;
-  border: 1px solid #c0ccda;
+  border: 1px solid rgba(0, 0, 0, 0.2);
   box-sizing: border-box;
   color: rgba(0, 0, 0, 0.7);
   display: block;
@@ -757,7 +757,7 @@
   right: 0;
   top: 0;
   text-align: center;
-  color: #c0ccda;
+  color: rgba(0, 0, 0, 0.2);
 }
 .el-input__icon:after{
   content: '';
@@ -803,7 +803,7 @@
   vertical-align: middle;
   display: table-cell;
   position: relative;
-  border: 1px solid #c0ccda;
+  border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   padding: 0 10px;
   width: 1%;
@@ -852,16 +852,16 @@
   cursor: not-allowed;
 }
 .el-textarea.is-disabled .el-textarea__inner::-webkit-input-placeholder{
-  color: #c0ccda;
+  color: rgba(0, 0, 0, 0.2);
 }
 .el-textarea.is-disabled .el-textarea__inner::-moz-placeholder{
-  color: #c0ccda;
+  color: rgba(0, 0, 0, 0.2);
 }
 .el-textarea.is-disabled .el-textarea__inner:-ms-input-placeholder{
-  color: #c0ccda;
+  color: rgba(0, 0, 0, 0.2);
 }
 .el-textarea.is-disabled .el-textarea__inner::placeholder{
-  color: #c0ccda;
+  color: rgba(0, 0, 0, 0.2);
 }
 .el-textarea__inner{
   display: block;
@@ -874,7 +874,7 @@
   color: rgba(0, 0, 0, 0.7);
   background-color: #fff;
   background-image: none;
-  border: 1px solid #c0ccda;
+  border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: border-color .2s cubic-bezier(.645,.045,.355,1);
 }
