--- a/theme/notification.css
+++ b/theme/notification.css
@@ -152,7 +152,7 @@
     right: 20px;
     position: absolute;
     cursor: pointer;
-    color: #c0ccda;
+    color: rgba(0, 0, 0, 0.2);
     font-size: 14px;
 }
 
