--- a/theme/option.css
+++ b/theme/option.css
@@ -114,7 +114,7 @@
 }
 
 .el-select-dropdown__item.selected.hover{
-    background-color: #1D8CE0
+    background-color: #c1b087
 }
 
 .el-select-dropdown__item span{
@@ -122,7 +122,7 @@
 }
 
 .el-select-dropdown__item.is-disabled{
-    color: #c0ccda;
+    color: rgba(0, 0, 0, 0.2);
     cursor: not-allowed
 }
 
