--- a/theme/slider.css
+++ b/theme/slider.css
@@ -108,16 +108,16 @@
     cursor: not-allowed;
 }
 .el-input.is-disabled .el-input__inner::-webkit-input-placeholder{
-    color: #c0ccda;
+    color: rgba(0, 0, 0, 0.2);
 }
 .el-input.is-disabled .el-input__inner::-moz-placeholder{
-    color: #c0ccda;
+    color: rgba(0, 0, 0, 0.2);
 }
 .el-input.is-disabled .el-input__inner:-ms-input-placeholder{
-    color: #c0ccda;
+    color: rgba(0, 0, 0, 0.2);
 }
 .el-input.is-disabled .el-input__inner::placeholder{
-    color: #c0ccda;
+    color: rgba(0, 0, 0, 0.2);
 }
 .el-input.is-active .el-input__inner{
     outline: none;
@@ -130,7 +130,7 @@
     background-color: #fff;
     background-image: none;
     border-radius: 4px;
-    border: 1px solid #c0ccda;
+    border: 1px solid rgba(0, 0, 0, 0.2);
     box-sizing: border-box;
     color: rgba(0, 0, 0, 0.7);
     display: block;
@@ -168,7 +168,7 @@
     right: 0;
     top: 0;
     text-align: center;
-    color: #c0ccda;
+    color: rgba(0, 0, 0, 0.2);
 }
 .el-input__icon:after{
     content: '';
@@ -214,7 +214,7 @@
     vertical-align: middle;
     display: table-cell;
     position: relative;
-    border: 1px solid #c0ccda;
+    border: 1px solid rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     padding: 0 10px;
     width: 1%;
@@ -263,16 +263,16 @@
     cursor: not-allowed;
 }
 .el-textarea.is-disabled .el-textarea__inner::-webkit-input-placeholder{
-    color: #c0ccda;
+    color: rgba(0, 0, 0, 0.2);
 }
 .el-textarea.is-disabled .el-textarea__inner::-moz-placeholder{
-    color: #c0ccda;
+    color: rgba(0, 0, 0, 0.2);
 }
 .el-textarea.is-disabled .el-textarea__inner:-ms-input-placeholder{
-    color: #c0ccda;
+    color: rgba(0, 0, 0, 0.2);
 }
 .el-textarea.is-disabled .el-textarea__inner::placeholder{
-    color: #c0ccda;
+    color: rgba(0, 0, 0, 0.2);
 }
 .el-textarea__inner{
     display: block;
@@ -285,7 +285,7 @@
     color: rgba(0, 0, 0, 0.7);
     background-color: #fff;
     background-image: none;
-    border: 1px solid #c0ccda;
+    border: 1px solid rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     transition: border-color .2s cubic-bezier(.645,.045,.355,1);
 }
@@ -422,7 +422,7 @@
 }
 .el-input-number__increase, .el-input-number__decrease{
     height: auto;
-    border-left: 1px solid #c0ccda;
+    border-left: 1px solid rgba(0, 0, 0, 0.2);
     width: 36px;
     line-height: 34px;
     top: 1px;
@@ -796,7 +796,7 @@
 }
 
 .el-slider__runway.disabled .el-slider__bar, .el-slider__runway.disabled .el-slider__button{
-    background-color: #c0ccda;
+    background-color: rgba(0, 0, 0, 0.2);
 }
 
 .el-slider__runway.disabled .el-slider__button-wrapper{}
@@ -911,6 +911,6 @@
     width: 4px;
     height: 4px;
     border-radius: 100%;
-    background-color: #c0ccda;
+    background-color: rgba(0, 0, 0, 0.2);
     transform: translateX(-50%);
 }
