--- a/theme/switch.css
+++ b/theme/switch.css
@@ -174,11 +174,11 @@
     position: relative;
     width: 46px;
     height: 22px;
-    border: 1px solid #c0ccda;
+    border: 1px solid rgba(0, 0, 0, 0.2);
     outline: none;
     border-radius: 12px;
     box-sizing: border-box;
-    background: #c0ccda;
+    background: rgba(0, 0, 0, 0.2);
     cursor: pointer;
     transition: border-color .3s, background-color .3s
 }
