--- a/src/app.less
+++ b/src/app.less
@@ -11,3 +11,15 @@ body {
   margin: 0;
   background: @background-gray;
 }
+.fade-enter-active, .fade-leave-active {
+  transition-property: opacity;
+  transition-duration: .25s;
+}
+
+.fade-enter-active {
+  transition-delay: .25s;
+}
+
+.fade-enter, .fade-leave-active {
+  opacity: 0
+}
